...
        <variable
            name="viewModel"
            type="com.rideaustin.ui.drawer.triphistory.TripDetailsViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    style="@style/RelativeLayout.Base"
                    android:paddingBottom="@dimen/trip_history_card_vertical_margin">

                    <!-- Map image -->

                    <ImageView
                        android:id="@+id/imageRideMap"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/trip_history_map_height"
                        android:scaleType="centerCrop"
                        app:selectedHistoryMapUrl="@{viewModel.history.mapUrl}"
                        tools:src="@drawable/map_placeholder" />

                    <!-- Date / Cost / Car info -->

                    <TextView
                        android:id="@+id/textViewDriveDate"
                        style="@style/RATextView.MontserratRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageRideMap"
                        android:layout_marginStart="@dimen/trip_history_card_horizontal_margin"
                        android:layout_marginTop="@dimen/trip_history_card_vertical_margin"
                        android:text="@{viewModel.history.dateString}"
                        android:textColor="@color/trip_history_item_black"
                        android:textSize="14sp"
                        tools:text="15/03/2017 06:25 AM" />

                    <TextView
                        android:id="@+id/textViewDriveCost"
                        style="@style/RATextView.MontserratRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/imageRideMap"
                        android:layout_marginEnd="@dimen/trip_history_card_horizontal_margin"
...
                        android:text="@{String.format(@string/money, viewModel.history.stripeCreditCharge)}"
                        android:textColor="@color/trip_history_item_black"
                        android:textSize="14sp"
                        tools:text="$1.50" />

                    <TextView
                        android:id="@+id/textViewDriversName"
                        style="@style/RATextView.MontserratLight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewDriveDate"
                        android:layout_marginStart="@dimen/trip_history_card_horizontal_margin"
                        android:layout_marginTop="@dimen/trip_history_card_space"
...
                            android:visibility="@{TextUtils.isEmpty(viewModel.history.rideEndAddress) ? View.GONE : View.VISIBLE}"
                            app:srcCompat="@drawable/ic_red" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewPickupAddress"
                        style="@style/RATextView.MontserratRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/routeIcons"
                        android:layout_marginTop="-1dp"
                        android:layout_toEndOf="@id/routeIcons"
...
                        android:text='@{TextUtils.isEmpty(viewModel.history.rideStartAddress)? @string/address_not_known : viewModel.history.rideStartAddress}'
                        android:textColor="#919499"
                        android:textSize="12dp"
                        tools:text="Ulitsa Volkhonka, 2/16, Moskva, Russia, 1190" /> <!-- use dp here -->

                    <TextView
                        android:id="@+id/textViewDestinationAddress"
                        style="@style/RATextView.MontserratRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/routeIcons"
                        android:layout_marginBottom="-2dp"
                        android:layout_toEndOf="@id/routeIcons"
...
                        android:layout_height="30dp"
                        android:layout_alignStart="@+id/linearLayout4"
                        android:layout_below="@+id/routeIcons"
                        android:layout_marginTop="14dp" />

                    <TextView
                        android:id="@+id/textViewPaymentCard"
                        style="@style/RATextView.MontserratRegular"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignTop="@+id/payment_provider_logo"
                        android:layout_marginLeft="5dp"
                        android:layout_toEndOf="@+id/payment_provider_logo"
...
