...
    <string name="ride_status_driver_cancelled">Driver cancelled</string>
    <string name="ride_status_rider_cancelled">Rider cancelled</string>
    <string name="gps_disabled_msg">GPS Disabled</string>
    <string name="please_enable_gps_msg">Please enable GPS in order to use app</string>

    <!-- Trip History -->
    <string name="trip_history_title">Trip History</string>
    <string name="trip_history_details_title">Trip Details</string>
    <string name="trip_history_support_topics_title">Support</string>
    <string name="trip_history_support_message_title">Tell us more</string>
    <string name="trip_history_empty_list">No trips present</string>
    <string name="trip_history_rated_driver">You rated %s</string>
    <string name="trip_history_your_driver">You driver is %s</string>
    <string name="trip_history_support_message_description">Please share any additional details you may have that you believe will assist - and we will get back to you quickly.</string>
...
