...
    <string name="app_name_formatted_placeholder">Ride|%1$s</string>

    <string name="waiting_for_drivers">Waiting for drivers…</string>
    <string name="cancelling_ride">Cancelling ride…</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="payment">Payment</string>
    <string name="history">Trip History / Support</string>
    <string name="help">Help</string>
    <string name="promotions">Promotions</string>
    <string name="donate">Round Up</string>
    <string name="drive_with_ride_city">Drive with %1$s</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
...
