...
            android:id="@+id/toolbar"
            style="@style/Toolbar.Base"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_forgot_pass" />

        </android.support.v7.widget.Toolbar>
...
